<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="58dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      >

    <View
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/light_purple"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="9dp"
      android:layout_marginStart="9dp"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      >

    <ImageView
        android:id="@+id/type_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_circle"
        android:padding="10dp"
        android:src="@drawable/ic_give_money"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_trading_pair"
        android:textColor="@color/purple"
        android:textSize="13sp"
        android:layout_marginLeft="6dp"
        fontPath="fonts/Exo2-Regular.ttf"
        />

  </LinearLayout>



  <LinearLayout
      android:layout_width="58dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      >

    <View
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/light_purple"
        />

  </LinearLayout>

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:paddingTop="12dp"
      android:paddingBottom="12dp"
      app:cardBackgroundColor="@color/light_purple"
      app:cardCornerRadius="8dp"
      app:cardPreventCornerOverlap="false"
      app:cardUseCompatPadding="true"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

      <TextView
          android:id="@+id/trading_pair_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_trading_pair"
          android:textColor="@color/gray"
          android:textSize="10sp"
          fontPath="fonts/Exo2-Regular.ttf"
          />

      <TextView
          android:layout_below="@+id/trading_pair_label"
          android:id="@+id/trading_pair"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_trading_pair"
          android:textSize="10sp"
          android:textColor="@color/darkerPurple"
          fontPath="fonts/Exo2-Bold.ttf"
          />

      <TextView
          android:id="@+id/amount_buy_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_amount_buy"
          android:textColor="@color/gray"
          android:layout_alignParentRight="true"
          android:layout_alignParentEnd="true"
          android:textSize="10sp"
          fontPath="fonts/Exo2-Regular.ttf"
          />

      <TextView
          android:layout_below="@+id/trading_pair_label"
          android:id="@+id/amount_buy"
          android:layout_alignParentRight="true"
          android:layout_alignParentEnd="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_amount_buy"
          android:textSize="10sp"
          android:textColor="@color/darkerPurple"
          fontPath="fonts/Exo2-Bold.ttf"
          />

      <TextView
          android:id="@+id/percentage_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignTop="@+id/amount_buy_label"
          android:layout_alignBottom="@+id/amount_buy"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:textSize="20sp"
          fontPath="fonts/Exo2-Bold.ttf"
          />

      <TextView
          android:id="@+id/transaction_price_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/percentage_text_view"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:textSize="10sp"
          android:layout_marginTop="4dp"
          android:text="@string/label_transaction_price"
          fontPath="fonts/Exo2-Regular.ttf"
          />

      <TextView
          android:id="@+id/transaction_price"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/transaction_price_label"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:textSize="20sp"
          android:layout_marginTop="4dp"
          android:text="@string/label_transaction_price"
          fontPath="fonts/Exo2-Bold.ttf"
          />

    </RelativeLayout>

  </android.support.v7.widget.CardView>

</LinearLayout>